cabal-version: 3.4
name:          oktade
version:       0.1.0
license:       Apache-2.0
license-file:  LICENSE
copyright:     (c) 2021 Trattue
author:        Trattue
synopsis:      Parser for JVM classfiles

library
    exposed-modules:
        Data.Oktade.ByteConstant
        Data.Oktade.ByteParser
        Data.Oktade.Classfile
        Data.Oktade.Classfile.Metadata
        Data.Oktade.Classfile.Metadata.ConstantPool
        Data.Oktade.Classfile.Metadata.MagicNumber
        Data.Oktade.Classfile.Metadata.Version
        Data.Oktade.Classfile.Class
        Data.Oktade.Classfile.Class.AccessFlags
        Data.Oktade.Classfile.Class.Attributes
        Data.Oktade.Classfile.Class.Fields
        Data.Oktade.Classfile.Class.Fields.AccessFlags
        Data.Oktade.Classfile.Class.Interfaces
        Data.Oktade.Classfile.Class.Methods
        Data.Oktade.Classfile.Class.Parse
        Data.Oktade.Classfile.Class.SuperClass
        Data.Oktade.Classfile.Class.ThisClass
        Data.Oktade.Parse

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        attoparsec >=0.14.1 && <0.15,
        base >=4.15.0 && <4.16,
        bytestring >=0.11.1 && <0.12,
        containers >=0.6.4 && <0.7

executable oktade
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        attoparsec >=0.14.1 && <0.15,
        base >=4.15.0 && <4.16,
        bytestring >=0.11.1 && <0.12,
        directory >=1.3.6 && <1.4,
        filepath >=1.4.2 && <1.5,
        oktade

test-suite oktade-test
    type:             detailed-0.9
    test-module:      OktadeTest
    hs-source-dirs:   testsuite/tests
    default-language: Haskell2010
    build-depends:
        base >=4.15.0 && <4.16,
        Cabal

benchmark oktade-bench
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   testsuite/benchmarks
    default-language: Haskell2010
    build-depends:
        attoparsec >=0.14.1 && <0.15,
        base >=4.15.0 && <4.16,
        bytestring >=0.11.1 && <0.12,
        clock,
        directory >=1.3.6 && <1.4,
        filepath >=1.4.2 && <1.5,
        oktade
