cabal-version: 3.6
name:          oktade
version:       0.1.0
license:       Apache-2.0
license-file:  LICENSE
copyright:     (c) 2021-2022 Trattue
author:        Trattue
synopsis:      Parser for JVM classfiles

library
    exposed-modules:
        Data.Oktade.ByteConstant
        Data.Oktade.ByteParser
        Data.Oktade.Classfile
        Data.Oktade.Classfile.Class
        Data.Oktade.Classfile.Class.AccessFlags
        Data.Oktade.Classfile.Class.Attributes
        Data.Oktade.Classfile.Class.Fields
        Data.Oktade.Classfile.Class.Fields.AccessFlags
        Data.Oktade.Classfile.Class.Fields.Attributes
        Data.Oktade.Classfile.Class.Interfaces
        Data.Oktade.Classfile.Class.Methods
        Data.Oktade.Classfile.Class.Methods.AccessFlags
        Data.Oktade.Classfile.Class.Methods.Attributes
        Data.Oktade.Classfile.Class.Methods.Code.Attributes
        Data.Oktade.Classfile.Class.Parse
        Data.Oktade.Classfile.Class.Records.Attributes
        Data.Oktade.Classfile.Class.SuperClass
        Data.Oktade.Classfile.Class.ThisClass
        Data.Oktade.Classfile.Metadata
        Data.Oktade.Classfile.Metadata.ConstantPool
        Data.Oktade.Classfile.Metadata.Version
        Data.Oktade.Parse

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        attoparsec,
        base,
        bytestring,
        containers

executable oktade
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Display
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        attoparsec,
        base,
        bytestring,
        containers,
        directory,
        filepath,
        oktade

test-suite oktade-test
    type:               exitcode-stdio-1.0
    main-is:            OktadeTest.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     testsuite/tests
    other-modules:      Data.Oktade.ClassfileSpec
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        base,
        hspec,
        oktade,
        attoparsec,
        bytestring,
        containers,
        directory,
        filepath

benchmark oktade-bench
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   testsuite/benchmarks
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        attoparsec,
        base,
        bytestring,
        clock,
        directory,
        filepath,
        oktade
