cabal-version: 3.6
name:          oktade
version:       0.1.0
license:       Apache-2.0
license-file:  LICENSE
copyright:     (c) 2021-2022 Trattue
author:        Trattue
synopsis:      Parser for JVM classfiles

library
    exposed-modules:  Oktade.Classfile
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base

executable oktade
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        oktade
